fix: Wizard Display Min(Max)imize 🐛 Will now full collapse and allow for dragging to bottom.
AB#291

--- a/EventHorizon.Game.Editor/Client/Shared/Components/Window/StandardWindow.razor.css
+++ b/EventHorizon.Game.Editor/Client/Shared/Components/Window/StandardWindow.razor.css
@@ -45,6 +45,7 @@
         height: 0px;
         overflow: hidden;
         opacity: 0;
+        padding: 0;
     }
 
 
